--- a/index.html
+++ b/index.html
@@ -31,21 +31,86 @@
                         Dropdown
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="./max_temperature.html">Temperature Plot</a>
+                        <a class=" dropdown-item" href="./humidity.html">Humdity Plot</a>
+                        <a class=" dropdown-item" href="./cloudiness.html">Cloudiness Plot</a>
+                        <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
+                        <div class=" dropdown-divider">
+                        </div>
+                        <a class="dropdown-item" href="./index.html>Back to Home Page</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                <li class=" nav-item">
+                            <a class="nav-link" href="./data.html">Data</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
+    </nav>
+
+    <div class="container">
+        <section class="row">
+            <div class="col-lg-7 col-md-12">
+                <div class="plot-content">
+                    <h1 class="plot-header">Summary: Latitude vs. Max Temperature</h1>
+                    <hr>
+                    <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Temperature" id="landing-image">
+
+                    <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.
+                        To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a
+                        dataset on over 500 cities.</p>
+                    <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs.
+                        latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This
+                        site provides the source data and visualizations created as part of the analysis, as well as
+                        explanations and descriptions of any trends and correlations witnessed.</p>
+                </div>
+            </div>
+
+            <div class="col-lg-5 col-md-12">
+                <div class="visplot-content">
+                    <h2 class="plot-header">Visualizations</h2>
+                    <hr>
+                    <div class="container">
+
+                        <div class="row">
+
+                            <div class="col-lg-6 col-md-3">
+                                <a href="./max_temperature.html">
+                                    <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Max Temperature"
+                                        id="vis-image">
+                                </a>
+                            </div>
+
+                            <div class="col-lg-6 col-md-3">
+                                <a href="./humidity.html">
+                                    <img src="./visualisations/humidity_plot.png" alt="Latitude vs. Humidity"
+                                        id="vis-image">
+                                </a>
+                            </div>
+
+                            <div class="col-lg-6 col-md-3">
+                                <a href="./cloudiness.html">
+                                    <img src="./visualisations/clouds_plot.png" alt="Latitude vs. Cloudiness"
+                                        id="vis-image">
+                                </a>
+                            </div>
+
+                            <div class="col-lg-6 col-md-3">
+                                <a href="./windspeed.html">
+                                    <img src="./visualisations/wind_plot.png" alt="Latitude vs. WindSpeed"
+                                        id="vis-image">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+    </div>
+    <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+    </div>
     </nav>
     <h3>Visualizations</h3>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
