--- a/cloudiness.html
+++ b/cloudiness.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Web Design</title>
+   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
                         <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
                         <div class=" dropdown-divider">
                         </div>
-                        <a class="dropdown-item" href="./index.html">Back to HOme Page</a>
+                        <a class="dropdown-item" href="./index.html">Back to Home Page</a>
                     </div>
                 </li>
                 <li class="nav-item active">
@@ -57,7 +58,7 @@
                 <div class="plot-content">
                     <h1 class="plot-header">Cloudiness</h1>
                     <hr>
-                    <img src="./visualisations/clouds_plot.png" alt="Latitude vs. Cloudiness" id="landing-image">
+                    <img src="./images/Cloudiness.PNG" id="landing-image" class="img-fluid">
 
                     <p>The level of cloudiness in a city does not appear to be related to the latitude.  There
                         seems to be a fairly consistent distribution of cloudiness across the different latitudes.  
