--- a/index.html
+++ b/index.html
@@ -11,19 +11,16 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+            <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Comparison</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -37,11 +34,10 @@
                         <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
                         <div class=" dropdown-divider">
                         </div>
-                        <a class="dropdown-item" href="./index.html>Back to Home Page</a>
                     </div>
                 </li>
                 <li class=" nav-item">
-                            <a class="nav-link" href="./data.html">Data</a>
+                    <a class="nav-link" href="./data.html">Data</a>
                 </li>
             </ul>
         </div>
@@ -49,11 +45,12 @@
 
     <div class="container">
         <section class="row">
-            <div class="col-lg-7 col-md-12">
+            <div class="col-lg-7">
                 <div class="plot-content">
-                    <h1 class="plot-header">Summary: Latitude vs. Max Temperature</h1>
+                    <h2 class="plot-header">Summary: Latitude vs. X</h2>
                     <hr>
-                    <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Temperature" id="landing-image">
+                    <img src="Resources/assets/images/temp.png" alt="Latitude vs. Temperature" id="landing-image"
+                        class="main-image">
 
                     <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.
                         To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a
@@ -65,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-5 col-md-12">
+            <div class="col-lg-5">
                 <div class="visplot-content">
                     <h2 class="plot-header">Visualizations</h2>
                     <hr>
@@ -75,29 +72,33 @@
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./max_temperature.html">
-                                    <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Max Temperature"
-                                        id="vis-image">
+                                    <figure> <img src="Resources/assets/images/temp.png" class="vis-images"
+                                            alt="Latitude vs. Max Temperature">
+                                        <figcaption> Latitude Vs Temp</figcaption>
+                                    </figure>
+
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./humidity.html">
-                                    <img src="./visualisations/humidity_plot.png" alt="Latitude vs. Humidity"
-                                        id="vis-image">
+                                    <figure> <img src="Resources/assets/images/humidity.png" class="vis-images"
+                                            alt="Latitude vs. Max Temperature">
+                                        <figcaption> Latitude Vs Humidity</figcaption>
+                                    </figure>
+
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./cloudiness.html">
-                                    <img src="./visualisations/clouds_plot.png" alt="Latitude vs. Cloudiness"
-                                        id="vis-image">
+                                    <img src="Resources/assets/images/cloudiness.png" class="vis-images" id="vis-image">
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./windspeed.html">
-                                    <img src="./visualisations/wind_plot.png" alt="Latitude vs. WindSpeed"
-                                        id="vis-image">
+                                    <img src="Resources/assets/images/windspeed.png" class="vis-images" id="vis-image">
                                 </a>
                             </div>
                         </div>
