--- a/humidity.html
+++ b/humidity.html
@@ -37,11 +37,11 @@
                         <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
                         <div class=" dropdown-divider">
                         </div>
-                        <a class="dropdown-item" href="./index.html">Back to Home Page</a>
+                        <a class="dropdown-item" href="./index.html"></a>
                     </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="./comparison.html">Comparison <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./data.html">Data</a>
@@ -53,13 +53,12 @@
     <div class="container">
         <section class="row">
             <div class="col-lg-7 col-md-12">
-                <div class="plot-content">
-                    <h1 class="plot-header">Humidity</h1>
+                <div class="box">
+                    <h2 class="plot-header">Latitude vs. Humidity</h2>
                     <hr>
                     <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Humidity" id="landing-image">
 
-                    <p>The humidity level does not appear to be strongly correlated with latitude based on this plot.
-                        There is some evidence that cities at the higher latitude are more humid. </p>
+                    <p>There seems to be no relationship between latitude and humidity.  A variety of measurements of humidity can be found regardless of latituded.  Regarding the data, there are some points with )% humidity towards the north pole. </p>
                 </div>
             </div>
 
