--- a/max_temperature.html
+++ b/max_temperature.html
@@ -37,7 +37,7 @@
                         <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
                         <div class=" dropdown-divider">
                         </div>
-                        <a class="dropdown-item" href="./index.html>Back to Home Page</a>
+                        <a class="dropdown-item" href="./index.html</a>
                     </div>
                 </li>
                 <li class=" nav-item active">
@@ -59,8 +59,11 @@
                     <hr>
                     <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Temperature" id="landing-image">
 
-                    <p>THe plot seems to suggest that temperature at the southern pole is not as extreme; however, this
-                        is misleading as there are no measurement shows for latitude.</p>
+                    <p>Three is a correlation between latitude and temperature. As one approaches the equator, which is
+                        represented by 0 degrees latitude, the temperature becomes significantly warmer. However, the
+                        weather peaks at -20 degrees latitude, rather than at 0 degrees latitude which maybe due to
+                        obliquity, which is the angle of tilt of the Earth's axis of rotation.</p>
+
                 </div>
             </div>
 
