--- a/windspeed.html
+++ b/windspeed.html
@@ -37,7 +37,7 @@
                         <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
                         <div class=" dropdown-divider">
                         </div>
-                        <a class="dropdown-item" href="./index.html>Back to Home Page</a>
+                        <a class="dropdown-item" href="./index.html></a>
                     </div>
                 </li>
                 <li class=" nav-item active">
@@ -60,7 +60,8 @@
                     <hr>
                     <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Temperature" id="landing-image">
 
-                    <p>This plot shows that the highest wind speeds were for cities at the highest latitudes.
+                    <p>Wind speed is generally between 0 and 15 mph regardless of latitude with some few points beyond
+                        that range. The highest recorded wind speed of about 50mph.</p>
                 </div>
             </div>
 
