--- a/cloudiness.html
+++ b/cloudiness.html
@@ -4,27 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Web Design</title>
-   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="/">Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+            <ul class="nav navbar-nav ms-auto w-100 justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Comparison</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -38,14 +34,9 @@
                         <a class=" dropdown-item" href="./windspeed.html">Windspeed PLot</a>
                         <div class=" dropdown-divider">
                         </div>
-                        <a class="dropdown-item" href="./index.html">Back to Home Page</a>
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="./comparison.html">Comparison <span class="sr-only">(current)</span></a>
-                </li>
-
-                <li class="nav-item">
+                <li class=" nav-item">
                     <a class="nav-link" href="./data.html">Data</a>
                 </li>
             </ul>
@@ -54,21 +45,19 @@
 
     <div class="container">
         <section class="row">
-            <div class="col-lg-7 col-md-12">
+            <div class="col-lg-7">
                 <div class="plot-content">
-                    <h1 class="plot-header">Cloudiness</h1>
+                    <h3 class="plot-header">Summary: Latitude vs. Cloudiness</h3>
                     <hr>
-                    <img src="./images/Cloudiness.PNG" id="landing-image" class="img-fluid">
+                    <img src="Resources/assets/images/cloudiness.png" alt="Latitude vs. Temperature" id="landing-image"
+                        class="main-image">
 
-                    <p>The level of cloudiness in a city does not appear to be related to the latitude.  There
-                        seems to be a fairly consistent distribution of cloudiness across the different latitudes.  
-                        It was a single snapshot of weather conditions on a particular date and time. </p>
-                    
+                    <p>There seems to be no relationship between latitude and cloudiness. A variety of measurements of cloudiness can be found regardless of latitude</p>
                 </div>
             </div>
 
-            <div class="col-lg-5 col-md-12">
-                <div class="visplot-content">
+            <div class="col-lg-12">
+                <div class="box">
                     <h2 class="plot-header">Visualizations</h2>
                     <hr>
                     <div class="container">
@@ -77,29 +66,39 @@
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./max_temperature.html">
-                                    <img src="./visualisations/temperature_plot.png" alt="Latitude vs. Max Temperature"
-                                        id="vis-image">
+                                    <figure> <img src="Resources/assets/images/temp.png" class="vis-images"
+                                            alt="Latitude vs. Max Temperature">
+                                        <figcaption> Latitude Vs Temp</figcaption>
+                                    </figure>
+
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./humidity.html">
-                                    <img src="./visualisations/humidity_plot.png" alt="Latitude vs. Humidity"
-                                        id="vis-image">
+                                    <figure> <img src="Resources/assets/images/humidity.png" class="vis-images"
+                                            alt="Latitude vs. Max Temperature">
+                                        <figcaption> Latitude Vs Humidity</figcaption>
+                                    </figure>
+
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./cloudiness.html">
-                                    <img src="./visualisations/clouds_plot.png" alt="Latitude vs. Cloudiness"
-                                        id="vis-image">
+                                    <img src="Resources/assets/images/cloudiness.png" class="vis-images" id="vis-image"
+                                        alt="Latitude Vs Cloudiness">
+                                    <figcaption> Latitude Vs Cloudiness</figcaption>
+                                    </figure>
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./windspeed.html">
-                                    <img src="./visualisations/wind_plot.png" alt="Latitude vs. WindSpeed"
-                                        id="vis-image">
+                                    <img src="Resources/assets/images/windspeed.png" class="vis-images" id="vis-image"
+                                        alt="Latitude Vs Windspeed">
+                                    <figcaption> Latitude Vs Windspeed</figcaption>
+                                    </figure>
                                 </a>
                             </div>
                         </div>
