--- a/index.html
+++ b/index.html
@@ -92,13 +92,19 @@
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./cloudiness.html">
-                                    <img src="Resources/assets/images/cloudiness.png" class="vis-images" id="vis-image">
+                                    <img src="Resources/assets/images/cloudiness.png" class="vis-images" id="vis-image"
+                                        alt="Latitude Vs Cloudiness">
+                                    <figcaption> Latitude Vs Cloudiness</figcaption>
+                                    </figure>
                                 </a>
                             </div>
 
                             <div class="col-lg-6 col-md-3">
                                 <a href="./windspeed.html">
-                                    <img src="Resources/assets/images/windspeed.png" class="vis-images" id="vis-image">
+                                    <img src="Resources/assets/images/windspeed.png" class="vis-images" id="vis-image"
+                                        alt="Latitude Vs Windspeed">
+                                    <figcaption> Latitude Vs Windspeed</figcaption>
+                                    </figure>
                                 </a>
                             </div>
                         </div>
